<resources>
    <string name="app_name">Echsan</string>
    
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_signin">Sign In</string>

    <string name="tv_home_name">Nama Pengguna</string>
    <string name="tv_home_member">Member</string>
    <string name="tv_home_umroh_haji">Umroh</string>
    <string name="tv_home_sosial">Sosial</string>
    <string name="tv_home_travel">Travel</string>
    <string name="tv_home_shop">Shop</string>
    <string name="tv_home_coin_value">99999</string>
    <string name="tv_home_coupon_value">999</string>
    <string name="tv_home_promo">Promo</string>

    <string name="et_umroh_cari_tipe">Tipe Umroh</string>
    <string name="et_umroh_cari_kota">Kota Asal</string>
    <string name="et_umroh_cari_tgl_berangkat">Tanggal Berangkat</string>
    <string name="et_umroh_cari_jamaah">Jamaah</string>
    <string name="btn_umroh_cari">Cari</string>
    <string name="tv_umroh_recommendations">Recommendations</string>
    
    <string name="tv_detil_umroh_paket">Paket Umroh Spesial</string>
    <string name="tv_detil_umroh_paket_desc">Makkah Madinah</string>
    <string name="tv_detil_umroh_hari">13 Hari</string>
    <string name="tv_detil_umroh_perjalanan">Perjalanan</string>
    <string name="tv_detil_umroh_menjelaskan">Menjelaskan perjalanan haji dan umroh dari hari</string>
    <string name="tv_detil_umroh_pertama">pertama sampai dengan hari yang terakhir. dan </string>
    <string name="tv_detil_umroh_terdapat">terdapat penjelasan kegitan di hari hari yamg ada.</string>
    
    <string name="tv_medsos_echsan">Echsan</string>
    <string name="tv_medsos_pt">Pt. Multimedia Investama</string>
    <string name="tv_medsos_hp">+123 456 789 234</string>
    <string name="tv_medsos_mobile">Mobile</string>
    <string name="tv_medsos_email">echsan.info@mail.com</string>
    <string name="tv_medsos_email2">Email</string>
    <string name="tv_medsos_ig">echsan</string>
    <string name="tv_medsos_ig2">Instagram</string>
    <string name="tv_medsos_facebook">echsan</string>
    <string name="tv_medsos_facebook2">Facebook</string>
    
    <string name="nav_home">Home</string>
    <string name="nav_bookings">Bookings</string>
    <string name="nav_points">Points</string>
    <string name="nav_profile">Profile</string>
    
    <string name="tv_hajiumroh_umrohhaji">Umroh Haji</string>
    
    <string name="string_tab_bookings_commpleted">Completed</string>
    <string name="string_tab_bookings_process">Process</string>
    <string name="string_tab_bookings_canceled">Canceled</string>
    <string name="tv_bookings_content_header_title">Transaction Title</string>
    <string name="tv_bookings_content_header_date">Transaction Date</string>
    <string name="tv_bookings_content_body_travel">Transaction Travel</string>
    <string name="tv_bookings_content_body_duration">Transaction Duration</string>
    <string name="tv_bookings_content_footer_qmark">Need Help?</string>
    <string name="tv_umroh_paket_lokasi">Lokasi</string>
    <string name="tv_umroh_paket_tgl_berangkat">Tanggal Keberangkatan</string>
    <string name="tv_umroh_paket_jamaah">Jamaah</string>
    <string name="tv_umroh_paket_cv_paket">Paket Umroh</string>
    <string name="tv_umroh_paket_cv_keberangkatan">Bulan Berangkat</string>
    <string name="tv_umroh_paket_cv_durasi">Durasi Umroh</string>
    <string name="tv_umroh_paket_cv_hotel">Hotel</string>
    <string name="tv_umroh_paket_cv_penerbangan">Penerbangan</string>
    <string name="tv_umroh_paket_cv_travel">Travel</string>
    <string name="tv_umroh_paket_cv_harga1">Mulai dari</string>
    <string name="tv_umroh_paket_cv_harga2">Harga Terendah Paket</string>



    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>

    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="fab_umroh_paket_filter">Filter</string>
    <string name="fab_umroh_paket_sort">Sort</string>
    <string name="tv_umroh_paket_filter_harga">Harga</string>
    <string name="et_umroh_paket_filter_harga_min">Minimum</string>
    <string name="et_umroh_paket_filter_harga_max">Maksimal</string>
    <string name="item_filter_durasi">Durasi</string>
    <string name="item_filter_lokasi">Lokasi</string>
    <string name="tv_filter_durasi">Durasi Perjalanan</string>
    <string name="tv_umroh_detil_paket">Umroh Paket</string>
    <string name="tv_umroh_paket_detil_tgl_keberangkatan">Tanggal Keberangkatan</string>
    <string name="tv_umroh_paket_detil_separator">:</string>
    <string name="tv_umroh_paket_detil_tgl_keberangaktan_cons">Kebarangkatan</string>
    <string name="tv_umroh_paket_detil_tgl_kepulangan_cons">Kepulangan</string>
    <string name="tv_umroh_paket_detil_durasi_cons">Durasi</string>
    <string name="tv_umroh_paket_detil_lokasi_keberangkatan">Lokasi Keberangkatan</string>
    <string name="tv_umroh_paket_detil_kuota">Kuota</string>
    <string name="tv_umroh_paket_detil_point">Point</string>
    <string name="tv_umroh_paket_detil_title">Tanggal</string>
    <string name="tv_item_umroh_paket_pilih_tanggal">Tanggal</string>
    <string name="tv_umroh_paket_detil_pilih_tanggal_title">Tanggal</string>
    <string name="tv_item_umroh_paket_fasilitas">Fasilitas</string>
    <string name="tv_umroh_paket_detil_fasilitas_title">Fasilitas</string>
    <string name="tv_umroh_paket_detil_fasilitas_footer">Lihat Semua Fasilitas</string>
    <string name="tv_home_benefit">Benefit</string>
    <string name="tv_home_doa">Doa</string>
    <string name="tv_home_medsos">Media Sosial</string>

    <string-array name="names">
        <item>Tuan</item>
        <item>Nyonya</item>
    </string-array>
</resources>
