<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="center_horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <ImageView
            android:id="@+id/btn_back_detil_umroh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <ImageView
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="250dp">
        </ImageView>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/tv_detil_umroh_paket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_detil_umroh_paket"/>
            <TextView
                    android:id="@+id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_detil_umroh_paket_desc"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/tv_detil_umroh_hari"/>
            <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_detil_umroh_perjalanan"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/tv_detil_umroh_menjelaskan"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_detil_umroh_pertama"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_detil_umroh_terdapat"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp">

            </ImageView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>