<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_margin="10dp"
        android:clipToPadding="false">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
        <TextView
                android:id="@+id/tv_umroh_paket_cv_paket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_umroh_paket_cv_paket"/>
        <ImageView
                android:layout_below="@id/tv_umroh_paket_cv_paket"
                android:id="@+id/iv_umroh_paket_cv_paket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:background="@color/colorPrimary"
                android:layout_marginRight="10dp"/>
        <TextView
                android:drawableLeft="@drawable/ic_calender_umroh"
                android:drawablePadding="10dp"
                android:layout_toRightOf="@id/iv_umroh_paket_cv_paket"
                android:layout_below="@id/tv_umroh_paket_cv_paket"
                android:id="@+id/tv_umroh_paket_cv_berangkat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_umroh_paket_cv_keberangkatan" />
        <TextView
                android:drawableLeft="@drawable/ic_durasi_umroh"
                android:drawablePadding="10dp"
                android:id="@+id/tv_umroh_paket_cv_durasi"
                android:layout_below="@id/tv_umroh_paket_cv_berangkat"
                android:layout_toRightOf="@id/iv_umroh_paket_cv_paket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_umroh_paket_cv_durasi"/>
        <TextView
                android:drawableLeft="@drawable/ic_hotel_umroh"
                android:drawablePadding="10dp"
                android:layout_toRightOf="@id/iv_umroh_paket_cv_paket"
                android:layout_below="@id/tv_umroh_paket_cv_durasi"
                android:id="@+id/tv_umroh_paket_cv_hotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_umroh_paket_cv_hotel"/>
        <TextView
                android:drawableLeft="@drawable/ic_keberangkatan_umroh"
                android:drawablePadding="10dp"
                android:layout_toRightOf="@id/iv_umroh_paket_cv_paket"
                android:layout_below="@id/tv_umroh_paket_cv_hotel"
                android:id="@+id/tv_umroh_paket_cv_penerbangan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_umroh_paket_cv_penerbangan"/>
        <TextView
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_travel_umroh"
                android:layout_below="@id/iv_umroh_paket_cv_paket"
                android:id="@+id/tv_umroh_paket_cv_travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/tv_umroh_paket_cv_travel"/>
        <TextView
                android:layout_below="@id/iv_umroh_paket_cv_paket"
                android:id="@+id/tv_umroh_paket_cv_harga1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_umroh_paket_cv_harga1"
                android:layout_toLeftOf="@id/tv_umroh_paket_cv_harga2"
                android:layout_marginRight="10dp"/>
        <TextView
                android:layout_below="@id/iv_umroh_paket_cv_paket"
                android:id="@+id/tv_umroh_paket_cv_harga2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_umroh_paket_cv_harga2"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>