<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
            android:padding="15dp"
            android:id="@+id/btn_filter_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sort_umroh"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <TextView
            android:padding="15dp"
            android:text="@string/fab_umroh_paket_filter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tv_filter_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_umroh_paket_filter_harga"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toBottomOf="@id/btn_filter_exit"
            app:layout_constraintLeft_toLeftOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_filter_harga_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_filter_harga"
            app:layout_constraintLeft_toLeftOf="@id/tv_filter_harga">
            <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/et_umroh_paket_filter_harga_min"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_filter_harga_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_filter_harga"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="20dp">
        <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/et_umroh_paket_filter_harga_max"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>