<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="paket"
            type="com.vira.echsan.data.entities.PaketUmroh" />
        <variable
            name="ClickListener"
            type="android.view.View.OnClickListener" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_marginVertical="5dp"
        android:clipToPadding="false"
        android:onClick="@{ClickListener}">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <ImageView
                android:id="@+id/iv_umroh_paket_cv_paket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/paket_umroh"/>
            <TextView
                android:textSize="20sp"
                android:id="@+id/tv_umroh_paket_cv_paket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_umroh_paket_cv_paket"
                tools:text="@string/tv_umroh_paket_cv_paket"
                android:text="@{paket.name}"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_marginBottom="5dp"
                android:drawableLeft="@drawable/ic_calender_umroh"
                android:drawablePadding="10dp"
                android:layout_toRightOf="@id/iv_umroh_paket_cv_paket"
                android:layout_below="@id/tv_umroh_paket_cv_paket"
                android:id="@+id/tv_umroh_paket_cv_berangkat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Tanggal Keberangkatan"
                android:text="@{paket.tanggal}"
                />
            <TextView
                android:drawableLeft="@drawable/ic_durasi_umroh"
                android:drawablePadding="10dp"
                android:id="@+id/tv_umroh_paket_cv_durasi"
                android:layout_below="@id/tv_umroh_paket_cv_berangkat"
                android:layout_toRightOf="@id/iv_umroh_paket_cv_paket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/tv_umroh_paket_cv_durasi"
                android:text="@{paket.durasi}"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:drawableLeft="@drawable/ic_hotel_umroh"
                android:drawablePadding="10dp"
                android:layout_toRightOf="@id/iv_umroh_paket_cv_paket"
                android:layout_below="@id/tv_umroh_paket_cv_durasi"
                android:id="@+id/tv_umroh_paket_cv_hotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/tv_umroh_paket_cv_hotel"
                android:text="@{paket.hotel}"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:drawableLeft="@drawable/ic_keberangkatan_umroh"
                android:drawablePadding="10dp"
                android:layout_toRightOf="@id/iv_umroh_paket_cv_paket"
                android:layout_below="@id/tv_umroh_paket_cv_hotel"
                android:id="@+id/tv_umroh_paket_cv_penerbangan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/tv_umroh_paket_cv_penerbangan"
                android:text="@{paket.penerbangan}"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:layout_below="@id/tv_umroh_paket_cv_penerbangan"
                android:id="@+id/tv_umroh_paket_cv_harga1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_umroh_paket_cv_harga1"
                android:layout_toRightOf="@id/iv_umroh_paket_cv_paket"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_below="@id/tv_umroh_paket_cv_harga1"
                android:id="@+id/tv_umroh_paket_cv_harga2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/tv_umroh_paket_cv_harga2"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/iv_umroh_paket_cv_paket"
                android:text="@{paket.harga}"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>