<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
            android:id="@+id/booking_content_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                    android:id="@+id/booking_content_header_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_bookings_content_header_title"
                    android:layout_alignParentLeft="true"/>

        <TextView
                android:id="@+id/booking_content_header_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_bookings_content_header_date"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_below="@id/booking_content_header"
            android:id="@+id/booking_content_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
        <RelativeLayout
                android:id="@+id/booking_content_body_container"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/booking_content_body_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="60dp"
                    android:minWidth="60dp"
                    android:background="@color/colorPrimaryLight"
                    android:layout_marginRight="5dp"/>
            <TextView
                    android:id="@+id/booking_content_body_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/booking_content_body_image"
                    android:text="@string/tv_bookings_content_body_travel"/>
            <TextView
                    android:id="@+id/booking_content_body_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/booking_content_body_image"
                    android:text="@string/tv_bookings_content_body_duration"
                    android:layout_below="@id/booking_content_body_travel"/>
        </RelativeLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:layout_below="@id/booking_content_body_container"/>
    </RelativeLayout>
</RelativeLayout>